<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PracticalTest01Var04</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="none"></string>
	<string name="DoM">Do\'</string>
    <string name="Sol">Sol</string>
    <string name="Mi">Mi</string>
    <string name="Do">Do</string>
    <string name="Navigate">Navigate to secondary activity</string>
</resources>
